# lsctl

./: .gitignore  .swcrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  fly.json5  install.sh  jest.config.cjs  package-lock.json  package.json  rust-toolchain.toml  the-file.json5  tsconfig.json
.changeset/: afraid-eggs-change.md  eleven-hats-rush.md  late-impalas-lay.md  pink-mugs-pretend.md  pre.json  real-fishes-hunt.md  rude-suns-warn.md  swift-games-hug.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  pipeline.yml  release.yml  verify.yml
npm/: .gitignore  .prettierignore  .prettierrc.js  .swcrc  Dockerfile  fly.json  jest-preset.js  jest.config.cjs  package-lock.json  package.json  postinstall.js  postinstall.mjs  schema.json
npm/deploy/: default.json  prd.json
npm/test/: jest-preset.spec.js  swcrc.spec.js
npm/tsconfig/: cjs-server.json  esm-server.json
scripts/: current_version.sh  tag.sh  test.sh  version.sh
src/: index.ts  main.rs
src/cmds/: fly_cmds.rs  mod.rs
src/commands/: build.ts  fly.rs  fly_config.rs  js.rs  mod.rs  test.ts
src/models/: fly_models.rs  mod.rs
src/types/: command-adder.ts  package-json.ts
src/utils/: collection_utils.rs  command_utils.rs  dependency-util.ts  file-util.ts  file_utils.rs  gcp_kms.rs  gcp_ssm.rs  hyper_utils.rs  log-util.ts  mod.rs  swc-util.ts
test-files/: main.ts
test/test-helpers/: chance.ts
test/utils/: dependency-util.spec.ts
