[package]
authors = ["Luke Shay <https://github.com/lukeshay>"]
description = "CLI to help simplify my workflows"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "lsctl"
repository = "https://github.com/lukeshay/lsctl"
version = "0.0.2-RC.4"

[[bin]]
bench = false
name = "lsctl"
path = "./src/main.rs"

[features]
default = []
plugin = [
  "swc/plugin",
  "swc_plugin_runner/filesystem_cache",
  "wasmer/default",
  "wasmer-wasi/default",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
atty = "0.2.14"
clap = { version = "3.1.18", features = ["cargo", "derive", "wrap_help"] }
colored = "2.0.0"
glob = "0.3.0"
path-absolutize = "3.0.13"
rayon = "1"
relative-path = "1.6.1"
schemars = "0.8.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["unbounded_depth"] }
swc = { version = "0.179.0" }
swc_common = { version = "0.18.0" }
swc_plugin_runner = { version = "0.55.0", default-features = false, optional = true}
toml = "0.5.9"
walkdir = "2"
wasmer = {version = "2.2.1", optional = true}
wasmer-wasi = {version = "2.2.1", optional = true}