[package]
authors = ["Luke Shay <https://github.com/lukeshay>"]
description = "CLI to help simplify my workflows"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "lsctl"
repository = "https://github.com/lukeshay/lsctl"
version = "0.0.2-RC.11"

[[bin]]
bench = false
name = "lsctl"
path = "./src/main.rs"

[features]
default = []
plugin = [
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["cargo", "derive", "wrap_help"] }
colored = "2.0.0"
futures = "0.3.21"
handlebars = "4.3.0"
relative-path = "1.6.1"
schemars = "0.8.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["unbounded_depth"] }
tokio = { version = "1.18.2", features = ["full"] }
toml = "0.5.9"
